# ZenBeasts

./: .env  .gitignore  .replit  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_GUIDELINES.md  IMPLEMENTATION_STATUS.md  LAUNCH_README.md  MOBILE_TESTING.md  PRIVATE_DEV_LAUNCH_SPEC.md  PROJECT_KNOWLEDGE.md  QUICK_START.md  README.md  SETUP.md  TASK_1_COMPLETION_SUMMARY.md  TASK_5.1_IMPLEMENTATION_SUMMARY.md  TASK_5.3_IMPLEMENTATION_SUMMARY.md  TASK_6.1_IMPLEMENTATION_SUMMARY.md  TASK_7.1_IMPLEMENTATION_SUMMARY.md  TESTING_CHECKLIST.md  WALLET_RECOVERY.md  art_style_prompts.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  verify-setup.js  verify_trait_inheritance.md
.github/: dependabot.yml
ZenBeasts/: # ZenBeasts 0 — High-level design (Solan  ARCHITECTURE.md  AUTOMATED_SETUP.md  BOT_HUB_SUMMARY.md  CLIENT_INTEGRATION.md  ERRORS.md  EXECUTIVE_SUMMARY.md  GIT_PATH_FIX.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION_GUIDE.md  LAUNCH_PLAYBOOK - Copy.md  ORGANIC_GROWTH.md  (+19 more)
programs/zenbeasts/: Cargo.toml
programs/zenbeasts/src/: errors.rs  lib.rs
programs/zenbeasts/src/instructions/: breed_beasts.rs  claim_rewards.rs  create_beast.rs  execute_combat_turn.rs  initialize.rs  initiate_combat.rs  mod.rs  perform_activity.rs  resolve_combat.rs  unlock_ability.rs  update_beast_owner.rs  update_config.rs  upgrade_ability.rs  upgrade_trait.rs
programs/zenbeasts/src/state/: beast_account.rs  combat_session.rs  mod.rs  program_config.rs
programs/zenbeasts/src/utils/: COOLDOWN_USAGE.md  breeding.rs  combat.rs  cooldown.rs  mod.rs  traits.rs  treasury.rs
(+123 files in other folders)
