[package]
name = "zenbeasts"
version = "0.1.0"
edition = "2021"
description = "ZenBeasts NFT ecosystem on Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "zenbeasts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.32.1"
solana-program = "~1.17"
mpl-token-metadata = "3.2.0"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
proptest = "1.4"